# ada-ohos

./: Cargo.toml  README.md
package/: CHANGELOG.md  README.md  index.ets  oh-package.json5
package/src/main/: module.json5
scripts/: build.sh
src/: lib.rs
